// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<label
  class="MuiFormControlLabel-root-1"
>
  <span
    class="MuiButtonBase-root-20 MuiIconButton-root-14 MuiSwitchBase-root-10 MuiRadio-root-5 MuiRadio-colorSecondary-9 sc-bwzfXH greMdn"
  >
    <span
      class="MuiIconButton-label-19"
    >
      <svg
        class="MuiSvgIcon-root-23"
        focusable="false"
        viewBox="0 0 24 24"
        aria-hidden="true"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        class="MuiSwitchBase-input-13"
        type="radio"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </span>
  <span
    class="MuiTypography-root-37 MuiTypography-body1-46 MuiFormControlLabel-label-4"
  />
</label>
`;

exports[`renders with label 1`] = `
<label
  class="MuiFormControlLabel-root-1"
>
  <span
    class="MuiButtonBase-root-20 MuiIconButton-root-14 MuiSwitchBase-root-10 MuiRadio-root-5 MuiRadio-colorSecondary-9 sc-bwzfXH greMdn"
  >
    <span
      class="MuiIconButton-label-19"
    >
      <svg
        class="MuiSvgIcon-root-23"
        focusable="false"
        viewBox="0 0 24 24"
        aria-hidden="true"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <input
        class="MuiSwitchBase-input-13"
        type="radio"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </span>
  <span
    class="MuiTypography-root-37 MuiTypography-body1-46 MuiFormControlLabel-label-4"
  >
    <p
      class="sc-bdVaJa dnyxcA"
    >
      Label
    </p>
  </span>
</label>
`;
